[build-system]
requires = ["hatchling>=1.5.0"] 
build-backend = "hatchling.build" 

[project]
name = "brain_games"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.2.0",
    "prompt>=0.4.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]  # Базовые правила
